Impl. with o1